[package]
name = "p2p-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
libp2p = { version = "0.53", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
] }
tokio = { version = "1.37.0", features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "fs",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# once_cell = "1.19.0"
# log = "0.4"
# pretty_env_logger = "0.5"
